# django_practice

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py
feeds/: models.py
users/: models.py  views.py
